--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -110,7 +110,7 @@ on post-fs
     start bootanim
     start vendor.hwcomposer-2-1
     start vendor.configstore-hal
-    start vendor.qti.hardware.display.allocator
+    start vendor.gralloc-2-0
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
